[tool.poetry]
name = "douban_reviews"
version = "0.1.0"
description = "Douban reviews"
authors = ["Nasy <nasyxx+crawler@gmail.com>"]
license = "LGPL-3.0+"

[tool.poetry.dependencies]
python = "^3.7"
nacf = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
